--- a/sf-crime.ipynb
+++ b/sf-crime.ipynb
@@ -12,7 +12,7 @@
    "id": "76f7b6f9",
    "metadata": {},
    "source": [
-    "**Authors**: Chiara Angileri, Livia Del Gaudio, Giorgia Pavani"
+    "**Authors**: Chiara Angileri (0001067582), Livia Del Gaudio (0001075971), Giorgia Pavani (0001075898)"
    ]
   },
   {
